# 100x-engineering-agents

./: .gitignore  .pre-commit-config.yaml  AGENTS.md  CLAUDE.md  Makefile  README.md  pyproject.toml
.github/workflows/: check.yml
agents/: settings.json
agents/agents/: .manifest.json  code-reviewer.md  doc-writer.md  security-auditor.md  task-planner.md  test-generator.md
agents/schemas/: bundle.schema.json  managed-agent-config.schema.json  subagent-frontmatter.schema.json
agents/templates/: qa-code.md.tmpl  qa-config.json.tmpl  qa-generic.md.tmpl  qa-html-ui.md.tmpl  qa-presentation.md.tmpl  subagent.md.tmpl  test-prompts.json.tmpl
evidence/: .gitattributes  SUMMARY.md
evidence/entries/: 2026-05-01_agents_agents_code-reviewer-md.json  2026-05-01_scripts_create-subagent-sh.json  2026-05-01_scripts_manifest-py.json
evidence/schema/: evidence.schema.json
evidence/sessions/: 2026-05-01_code-reviewer_haiku.json  2026-05-01_doc-writer_haiku.json  2026-05-01_performance-optimizer_haiku.json  2026-05-01_security-auditor_haiku.json  2026-05-01_task-planner_haiku.json  2026-05-01_test-generator_haiku.json
scripts/: agent-factory.py  bundle-factory.py  collect-evidence.py  create-subagent.sh  duet-factory.py  eval-agent.py  manifest.py  record-evidence.py  run-bundle.py  run-duet.py  run_bundle_helpers.py  run_duet_helpers.py  setup-hooks.sh  test-agent.py  validate-bundle.py  validate-config.py  validate-duet.py  validate_subagents.py
scripts/agent_factory/: __init__.py  blueprint.py  edd_loop.py  eval_suite.py  utils.py
scripts/bundle_factory/: __init__.py  bundle_blueprint.py  qa_strategy.py  skill_resolver.py
tests/: test_bundle_factory.py  test_config.py  test_duet_factory.py  test_qa_strategy.py  test_run_bundle.py  test_run_duet.py  test_schemas.py  test_security.py  test_skill_resolver.py  test_validate_bundle.py  test_validate_duet.py  test_validate_subagents.py  test_validators.py
(+173 files in other folders)
