[build-system]
requires = ["setuptools>=68.0"]
build-backend = "setuptools.build_meta"

[project]
name = "100x-engineering-agents"
version = "0.1.0"
description = "AIエージェントが正しく動くための構造化コンテキストを設計・管理・運用するフレームワーク"
readme = "README.md"
license = "MIT"
requires-python = ">=3.10"
dependencies = [
    "pyyaml>=6.0",
    "jsonschema>=4.0",
]

[project.optional-dependencies]
api = [
    "anthropic>=0.50.0",
]
security = [
    "requests>=2.28.0",
]
dev = [
    "pyyaml>=6.0",
    "jsonschema>=4.0",
    "anthropic>=0.50.0",
    "requests>=2.28.0",
    "pre-commit>=3.0",
]

[tool.setuptools]
packages = []
