[build-system]
requires = ["setuptools>=68.0"]
build-backend = "setuptools.build_meta"

[project]
name = "duo-agents"
version = "1.0.0"
description = "ANTHROPIC_API_KEY 一つで、自分用の AI エージェント (Task + QA のペア) をローカルで作れるフレームワーク"
readme = "README.md"
license = "MIT"
requires-python = ">=3.12,<3.15"
dependencies = [
    "anthropic>=0.97,<1.0",
    "pydantic>=2.13,<3.0",
    "pyyaml>=6.0.2,<7.0",
    "typer>=0.25,<1.0",
    "jsonschema>=4.0,<5.0",
]

[project.optional-dependencies]
dev = [
    "pre-commit>=4.0,<5.0",
    "pytest>=8.0,<9.0",
]

[tool.setuptools.packages.find]
where = ["src"]

[tool.setuptools.package-data]
duo_agents = ["py.typed"]
